k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: html-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: html
  template:
    metadata:
      labels:
        app: html
    spec:
      containers:
        - name: html-container
          image: 910757112553.dkr.ecr.ap-south-1.amazonaws.com/html-demo:latest
          ports:
            - containerPort: 80
