k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: html-service
spec:
  type: ClusterIP
  selector:
    app: html
  ports:
    - port: 80
      targetPort: 80
